src/assets/bundle.css
:root {
  --gutter: 1em;
  /*
    'prefers-color-scheme: no-preference' isn't a standard property, so set the
    default light colours by default.
  */
  --text: 48, 54, 47;
  --background: 245, 249, 233;
  --accent: 204, 40, 81;
  --disabled: 164, 164, 164;
}

@media (prefers-color-scheme: dark) {
  :root {
    --text: 208, 208, 208;
    --background: 48, 54, 47;
    --accent: 249, 220, 92;
  }
}

html {
  overflow-y: scroll;
}

@supports (scrollbar-gutter: stable) {
  html {
    overflow-y: auto;
    scrollbar-gutter: stable;
  }
}

[id] {
  scroll-margin-top: 10em;
}

a {
  color: rgb(var(--accent));
  font-weight: bold;
  text-underline-offset: 0.25em;
}

:focus {
  outline: none;
  outline: 2px dashed rgb(var(--accent));
  outline-offset: 2px;
}

@font-face {
  font-family: "Lilex Medium";
  src:
    url("/assets/fonts/Lilex-Medium.woff2") format("woff2"),
    url("/assets/fonts/Lilex-Medium.woff") format("woff");
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: "Lilex Regular";
  src:
    url("/assets/fonts/Lilex-Regular.woff2") format("woff2"),
    url("/assets/fonts/Lilex-Regular.woff") format("woff");
  font-weight: normal;
  font-style: normal;
}

body {
  font-family: "Lilex Regular", monospace;
  line-height: 2;
  margin: 0 auto;
  padding: 0;
  display: grid;
  grid-auto-flow: column;
  min-height: 100vb;
  color: rgb(var(--text));
  background-color: rgb(var(--background));
  max-width: 64em;
}

.main-wrapper {
  display: grid;
  align-content: space-between;
  padding: 1em;
}

@media only screen and (min-width: 400px) {
  .main-wrapper {
    border: 1px solid rgb(var(--text));
    margin: 1em 1em 2em 1em;
    padding: 1em;
  }
}

@media only screen and (min-width: 768px) {
  .main-wrapper {
    margin: 3em 3em 6em 3em;
    padding: 3em;
    box-shadow: 0.625em 0.625em rgba(var(--text), 0.25);
  }
}

.sticky {
  position: sticky;
  top: 0;
  background-color: rgb(var(--background));
  padding: 0;
  border-bottom: 1px solid rgb(var(--accent));
  margin-bottom: 3em;
  display: grid;
  justify-content: space-between;
  grid-template-columns: 75% min-content;
  align-items: center;
}

.crumbs {
  list-style-type: none;
  padding: 0;
}

.crumb {
  display: inline;
}

.crumb-last {
  font-weight: bold;
}

.crumbs > li:not(:last-child)::after {
  content: " / ";
}

.minimal-button {
  font-family: "Lilex Medium", monospace;
  border: none;
  margin-left: auto;
  padding: 0.5em 1em;
  visibility: hidden;
  opacity: 0;
  transition:
    visibility 0s,
    opacity 0.3s linear;
  border: 1px solid rgb(var(--accent));
  background: none;
  color: rgb(var(--accent));
  width: max-content;
  aspect-ratio: 3/2;
}

.minimal-button:hover {
  cursor: pointer;
  background-color: rgb(var(--accent));
  color: rgb(var(--background));
}

.minimal-button:focus {
  opacity: 100%;
}

article p,
article ul {
  max-width: 80ch;
  margin: 2em 0em;
}

ul {
  list-style-type: square;
}

/* don't add any additional margin to indented lists */
li ul {
  margin: 0;
}

.post-info {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(200px, max-content));
  gap: 0.5em;
  width: 100%;
  margin: 2em 0;
}

.post-info .text > *:first-child {
  margin-top: 0;
}

.post-info .metadata > *:first-child {
  margin-top: 0.25em;
}

.post-info .subtitle {
  margin: 0.25em 0;
}

@media only screen and (max-width: 768px) {
  .post-info {
    display: block;
  }

  .post-info .metadata {
    display: block;
    margin-bottom: 1em;
  }

  .post-info:not(:first-of-type) {
    border-top: 1px solid rgb(var(--accent));
    padding-top: 1em;
  }
}

blockquote {
  max-width: 80ch;
  border-left: 0.375em solid rgb(var(--accent));
  text-emphasis: italics;
}

blockquote p {
  padding-left: 1em;
}

code {
  font-family: "Lilex Medium", monospace;
}

/* Code within text */
p > code,
li > code,
dd > code,
td > code,
s > code {
  background: rgb(var(--accent));
  color: rgb(var(--background));
  word-wrap: break-word;
  box-decoration-break: clone;
  padding: 0.2em 0.3em;
  font-size: 0.9em;
}

footer {
  margin-top: 8em;
  padding-top: 2em;
  border-top: 1px solid rgb(var(--text));
  font-size: 90%;
  font-family: "Lilex Medium", monospace;
  display: grid;
  grid-template-columns: 150px 1fr auto;
  align-items: center;
}

footer div:last-child {
  text-align: right;
}

footer img {
  border-radius: 10%;
}

@media only screen and (max-width: 900px) {
  footer {
    display: block;
    text-align: center;
  }

  footer div:last-child {
    font-size: 0.8em;
    text-align: center;
  }
}

.title {
  margin-bottom: 0;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  margin: 0.5em 0;
  font-family: "Lilex Medium", monospace;
}

h1 {
  font-size: 1.75em;
}

h2 {
  font-size: 1.25em;
}

h3 {
  font-size: 1em;
  font-weight: bold;
}

figure {
  border: 1px solid rgb(var(--accent));
  padding: 1em;
  width: fit-content;
  margin: 1em auto;
  max-width: 90%;
}

figure a {
  line-height: 0;
}

figure img {
  border-radius: 4px;
  width: 100%;
  min-height: 100%;
}

figure figcaption {
  margin-top: 0.5em;
  text-align: center;
}

p img {
  max-width: 30%;
  border-radius: 4px;
  float: right;
  margin: 1em 0 1em 1em;
}

hr.accent {
  border: none;
  border-bottom: 1px solid rgb(var(--accent));
  margin-bottom: 3em;
}

.pagination {
  align-content: center;
}

.pagination-list {
  list-style-type: none;
  display: grid;
  grid-auto-flow: column;
  justify-content: center;
  margin: 0;
  padding: 0;
}

.pagination-list > li {
  min-width: 2em;
  height: 2em;
  margin: 0.5em;
  text-align: center;
  border: 1px solid rgb(var(--accent));
}

.pagination-list > li > a {
  display: inline-block;
  height: 100%;
  width: 100%;
  text-decoration: none;
}

.pagination-list > li:hover {
  background-color: rgb(var(--accent));
}

.pagination-list > li:hover > a {
  color: rgb(var(--background));
}

[aria-current="page"] {
  background-color: rgb(var(--accent));
}

[aria-current="page"] > a {
  color: rgb(var(--background));
}

.pagination-list > li > .disabled {
  color: rgb(var(--disabled));
  text-decoration: none;
}

li:has(> a.disabled) {
  border-color: rgb(var(--disabled));
  pointer-events: none;
}

.tagslist {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

@media only screen and (min-width: 768px) {
  .tagslist li {
    display: inline;
    margin-right: 1em;
  }
}

.spoiler {
  color: rgb(var(--text));
  background-color: rgb(var(--text));
  transition: all 0.3s linear;
}

.spoiler:hover,
.spoiler:focus {
  color: rgb(var(--text));
  background: inherit;
}

article.post > hr {
  border: none;
  border-bottom: 1px solid rgb(var(--text));
  width: 50%;
  margin: 4em auto;
}

.inline-list {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.inline-list > li {
  display: inline-block;
}

.inline-list > li:not(:last-child) {
  margin-right: 1em;
}

.splash {
  display: grid;
  align-items: baseline;
  justify-content: space-between;
  grid-template-columns: 250px auto;
}

@media only screen and (max-width: 768px) {
  .splash {
    display: block;
    text-align: center;
    margin-bottom: 2em;
  }
}

pre {
  max-width: calc(100vi - (calc(var(--gutter) * 4)));
}

@media only screen and (min-width: 400px) {
  :root {
    --gutter: 1.5em;
  }
}

@media only screen and (min-width: 768px) {
  :root {
    --gutter: 3.5em;
  }
}

.note {
  margin: 2em 0;
  padding-bottom: 1em;
  border-bottom: 1px solid rgb(var(--accent));
}

